--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,7 @@ rand = { version = "0.8.5", features = ["small_rng"] }
 unixstring = "0.2.7"
 widestring = "1.0.2"
 rand_pcg = "0.3.1"
+git-version = "0.3"
 
 [build-dependencies]
 autocxx-build = "0.23.1"
